<resources>
    <string name="app_name">Lock Down</string>
    <string name="passcodeHeader">Your Passcode</string>
    <string name="Passcode">****</string>
    <string name="PasscodeUpdate">****</string>
    <string name="changePasscode">Change Passcode &#187;</string>
    <string name="editSecurity">Security Settings &#187;</string>
    <string name="reset">Reset &#187;</string>
    <string name="enterLockDown">Enter Phone &#187;</string>
    <string name="title_activity_maps">Map</string>
    <string name="tempDash">———— ———— ———— ————</string>
    <string name="title_activity_change_password_screen">ChangePasswordScreen</string>
    <string name="title_exit_activity">Exit Lockdown</string>
    <string name="InputNewCode">Input New Passcode</string>
    <string name="SelectAnswer">Select 3 of the following for your security questions</string>
    <string name="ReturnHome">Return Home &#187;</string>
    <string name="Back">&#171; Back</string>
    <string name="Select_Questions">Select 6 of the Following Questions:</string>
    <string name="tempSettingsButton">Edit security questions &#187;</string>
    <string name="exitlockdown">&#171; Exit</string>
    <string name="enterMaps">Enter Google Maps &#187;</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit &#187;</string>
    <string name="question">Q</string>
    <string name="test">test</string>
    <string name="title_activity_edit_questions">Edit Questions</string>
    <string-array name="security_array">
        <item>Question 1</item>
        <item>Question 2</item>
        <item>Question 3</item>
        <item>Question 4</item>
        <item>Question 5</item>
        <item>Question 6</item>
        <item>Question 7</item>
    </string-array>
    <string name="Q1">Q1</string>
    <string name="Q2">Q2</string>
    <string name="Q3">Q3</string>
    <string name="Q4">Q4</string>
    <string name="Q5">Q5</string>
    <string name="Q6">Q6</string>
    <string name="A1">A1</string>
    <string name="A2">A2</string>
    <string name="A3">A3</string>
    <string name="A4">A4</string>
    <string name="A5">A5</string>
    <string name="A6">A6</string>
    <string name="line">___________________________</string>
    <string name="title_activity_settings">Return to change passcode</string>
    <string name="edit_question">your question</string>
    <string name="edit_answer">your answer</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_exit_lockdown">Sign in</string>
    <string name="prompt_code">PassCode</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Exit LockDown</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
        <string name="demo_title">Google Maps API Demos</string>
        <string name="no_demos">No demos</string>
        <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
        <string name="alpha">Alpha</string>
        <string name="animate">Animate</string>
        <string name="basic_map_demo_label">Basic Map</string>
        <string name="basic_map_demo_description">Launches a map.</string>
        <string name="buildings">Buildings</string>
        <string name="camera_demo_label">Camera</string>
        <string name="camera_demo_description">Demonstrates camera functions.</string>
        <string name="circle_demo_label">Circles</string>
        <string name="circle_demo_description">Demonstrates how to add Circles to a map.</string>
        <string name="camera_clamping_demo_label">Camera Clamping</string>
        <string name="camera_clamping_demo_description">Demonstrates how to constrain the camera to specific boundaries and zoom levels.</string>
        <string name="clamp_latlng_adelaide">Clamp to Adelaide</string>
        <string name="clamp_latlng_pacific">Clamp to Pacific</string>
        <string name="clamp_latlng_reset">Reset LatLng Bounds</string>
        <string name="clamp_min_zoom">MinZoom++</string>
        <string name="clamp_max_zoom">MaxZoom--</string>
        <string name="clamp_zoom_reset">Reset Zoom Bounds</string>
        <string name="clear_map">Clear</string>
        <string name="clickable">Clickable</string>
        <string name="color">Color</string>
        <string name="compass">Compass</string>
        <string name="custom_info_contents">Custom info contents</string>
        <string name="custom_info_window">Custom info window</string>
        <string name="default_info_window">Default info window</string>
        <string name="down_arrow">\u2193</string>
        <string name="drag_melbourne">Drag Melbourne</string>
        <string name="duration">Custom Duration</string>
        <string name="events_demo_label">Events</string>
        <string name="events_demo_description">Demonstrates event handling.</string>
        <string name="fade_in">Fade In Tiles</string>
        <string name="fill_alpha">Fill Alpha</string>
        <string name="fill_hue">Fill Hue</string>
        <string name="flat">Flat</string>
        <string name="go_to_bondi">Go to Bondi</string>
        <string name="go_to_santorini">Go to Santorini</string>
        <string name="go_to_sydney">Go to Sydney</string>
        <string name="ground_overlay_demo_label">Ground Overlays</string>
        <string name="ground_overlay_demo_description">Demonstrates how to add a GroundOverlay to a map.</string>
        <string name="hue">Hue</string>
        <string name="hybrid">Hybrid</string>
        <string name="indoor">Indoor</string>
        <string-array name="layers_array">
            <item>@string/normal</item>
            <item>@string/hybrid</item>
            <item>@string/satellite</item>
            <item>@string/terrain</item>
            <item>@string/none_map</item>
        </string-array>
        <string name="layers_demo_label">Layers</string>
        <string name="layers_demo_description">Demonstrates the different map layers.</string>
        <string name="left_arrow">\u2190</string>
        <string name="location_source_demo_label">Location Source Demo</string>
        <string name="location_source_demo_description">Demonstrates how to use a custom location source.</string>
        <string name="map_circle_description">Google Map with circles.</string>
        <string name="map_not_ready">Map is not ready yet</string>
        <string name="map_in_pager_demo_label">Map In Pager</string>
        <string name="map_in_pager_demo_description">Demonstrates how to add a map to a ViewPager.</string>
        <string name="marker_demo_label">Markers</string>
        <string name="marker_close_info_window_on_retap_demo_label">Marker Close Info Window on Retap</string>
        <string name="marker_close_info_window_on_retap_demo_description">Demonstrates how to close the info window when the currently selected marker is retapped.</string>
        <string name="marker_demo_description">Demonstrates how to add Markers to a map.</string>
        <string name="move_the_camera">Move the camera</string>
        <string name="multi_map_demo_label">Multiple Maps</string>
        <string name="multi_map_demo_description">Demonstrates how to show multiple maps in a single activity.</string>
        <string name="my_location">My Location</string>
        <string name="my_location_demo_label">My Location Demo</string>
        <string name="my_location_demo_description">Demonstrates how to use GMS Location.</string>
        <string name="mylocation_button">My Location Button</string>
        <string name="mylocation_layer">My Location Layer</string>
        <string name="none_map">None</string>
        <string name="normal">Normal</string>
        <string name="options_demo_label">Options</string>
        <string name="options_demo_description">Demonstrates how to use Options to initialize a map.</string>
        <string name="polygon_demo_label">Polygons</string>
        <string name="polygon_demo_description">Demonstrates how to add Polygons to a map.</string>
        <string name="polyline_demo_label">Polylines</string>
        <string name="polyline_demo_description">Demonstrates how to add Polylines to a map.</string>
        <string name="programmatic_demo_label">Programmatically add map</string>
        <string name="programmatic_demo_description">Demonstrates how to add a MapFragment programmatically.</string>
        <string name="properties_circle">Properties for Circle(s)</string>
        <string name="properties_australia_polyline">Properties for Polyline over Australia</string>
        <string name="properties_australia_polygon">Properties for Polygon over Australia</string>
        <string name="rotate">Rotate Gestures</string>
        <string name="raw_map_view_demo_label">Raw MapView</string>
        <string name="raw_map_view_demo_description">Demonstrates how to use a raw MapView.</string>
        <string name="reset_map">Reset</string>
        <string name="retain_map_demo_label">Retain map</string>
        <string name="retain_map_demo_description">Demonstrates how to reuse a MapFragment.</string>
        <string name="right_arrow">\u2192</string>
        <string name="rotation">Rotation:</string>
        <string name="satellite">Satellite</string>
        <string name="save_state_demo_label">Save the state of a MapFragment.</string>
</resources>