<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/change_passcode_screen"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sp18.ssu370.baseprojectapp.ChangePasswordScreen"
    tools:showIn="@layout/activity_change_password_screen">


    <TextView
        android:id="@+id/ChangeCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:fontFamily="monospace"
        android:text="@string/InputNewCode"
        android:textAlignment="center"
        android:textColor="@color/colorSubheading"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/TempDashes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:fontFamily="monospace"
        android:text="@string/tempDash"
        android:textAlignment="center"
        android:textColor="@color/colorAccentPurple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />


    <Button
        android:id="@+id/return_home"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:fontFamily="monospace"
        android:onClick="@string/app_name"
        android:text="@string/ReturnHome"
        android:textAlignment="center"
        android:textColor="@color/colorFont"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003" />



</android.support.constraint.ConstraintLayout>