<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/question"
        android:textColor="@color/colorFont"
        android:textSize="@dimen/question"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/edit_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/edit_question"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:maxLength="28"
        android:textColorHint="@color/colorSubheading"
        android:textSize="@dimen/input" />

    <EditText
        android:id="@+id/edit_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/edit_answer"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:maxLength="25"
        android:textColorHint="@color/colorSubheading"
        android:textSize="@dimen/input" />

    <CheckBox
        android:id="@+id/use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="use question" />
</LinearLayout>